fix: text-align should be align-items

--- a/css/components/about.css
+++ b/css/components/about.css
@@ -35,7 +35,7 @@
 @media only screen and (max-width: 768px) {
     .about {
         flex-direction: column;
-        text-align: center;
+        align-items: center;
     }
 
     .about .about__left {
